--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nameit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://rahulnegi20.github.io/name-it",
+  "homepage": "http://rahulnegi20.github.io/Name-it",
   "dependencies": {
     "@rstacruz/startup-name-generator": "0.3.0",
     "@testing-library/jest-dom": "^5.11.4",
